### Voltaire's Nightmare Changelog ###

# v 2.2.1 #

-Small fixes for the following mission trees: Austria
-Fixed major bug causing the Factionalism of the Rus disaster to trigger multiple times
-Gave certain Pagan religions access to a new clergy privilege, allowing them to change their personal deity
-Changed New England's country name
-Silesia can now only balkanise at least 10 years after the Fragmentation of Poland disaster fires
-The Old Saxon split benefactor now only receives Electorate if Old Saxony had it previously
-Some untriggerable Harmonization events will now trigger correctly
-Major nerfs to Genoese Crossbowmen company: cost increased and size decreased; it also now does +15% fire damage rather than flat +1 to infantry fire (this made it stupidly overpowered in the early game)
-Polish Husaria company cost increased
-Changed many modifiers in NIs
-Other minor localization fixes

# v 2.2.0 #
 
#Additions
-Added the following new mercenary companies: Black Company, Polish Husaria, Genoese Crossbowmen
-Added new mission tree for the Papal States with 50 missions
-Added new mission tree for Pfullendorf with 12 missions (contribution by Leonhard von Keutschach)
-Added new mission tree for Alsace with with 15 missions (contribution by FrenchKnight)
-Added Russian Factionalism disaster for Kiev with 11 associated events
-Added an imperial incident that allows the Emperor to break personal unions when the senior partner is not a member of the HRE
-Added an event chain for the Emperor to call a Diet with the Thuringian and Saxon Princes
-Added an event chain for the fall and partition of the Stem Duchy of Saxony
-Significant changes to the leadup to the Crisis of the 11th Century disaster; added 5 new related decisions
-Added a NI set for the Nordmark (see Changes section)
-Added 1 new estate privilege for the Mamluks
-Added 2 forgotten Industrialization events from vanilla
-Overhauled institution spread events of all custom institutions