@@ -811,6 +811,6 @@ merc_genoese_crossbowmen = {
 		}
 	}
     modifier = {
-		fire_damage = 0.15
+		fire_damage = 0.1
 	}
 }
