@@ -501,6 +501,12 @@ country_event = {
 		NED = {
 			change_government = monarchy
 			adopt_reform_progress = ROOT
+			define_ruler = {
+				dynasty = ROOT
+			}
+			define_heir = {
+				dynasty = ROOT
+			}
 		}
 		vassalize = NED
 	}
@@ -1036,7 +1042,7 @@ country_event = {
     }
 }
 
-#The Beeldenstorm
+#The Beeldenstorm (73)
 country_event = {
 	id = vn_missions.73
 	title = vn_missions.73.t
@@ -1660,6 +1666,153 @@ country_event = {
 		}
 		2268 = {
 			move_capital_effect = yes
+		}
+	}
+}
+
+#Cisalpine Republic (84)
+country_event = {
+	id = vn_missions.84
+	title = vn_missions.84.t
+	desc = vn_missions.84.d
+	picture = CONQUEST_eventPicture
+
+	is_triggered_only = yes
+
+	option = {
+		name = vn_missions.84.a
+		ai_chance = {
+			factor = 50 
+			modifier = {
+				factor = 0
+				government = monarchy
+			}
+		}
+		lombardy_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = ITA
+		}
+		romagna_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = ITA
+		}
+		ITA = {
+			change_government = republic
+			adopt_reform_progress = ROOT
+		}
+		vassalize = ITA
+	}
+	option = {
+		name = vn_missions.84.b
+		ai_chance = {
+			factor = 50 
+			modifier = {
+				factor = 0
+				government = republic
+			}
+		}
+		lombardy_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = ITA
+		}
+		romagna_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = ITA
+		}
+		ITA = {
+			change_government = monarchy
+			adopt_reform_progress = ROOT
+			define_ruler = {
+				dynasty = ROOT
+			}
+			define_heir = {
+				dynasty = ROOT
+			}
+		}
+		vassalize = ITA
+	}
+	option = {
+		name = vn_missions.84.c
+		ai_chance = { factor = 5 }
+		lombardy_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			add_province_modifier = {
+				name = "fra_batavia_unrest"
+				duration = 9125
+			}
+		}
+		romagna_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			add_province_modifier = {
+				name = "fra_batavia_unrest"
+				duration = 9125
+			}
+		}
+	}
+}
+
+#Roman Republic (85)
+country_event = {
+	id = vn_missions.85
+	title = vn_missions.85.t
+	desc = vn_missions.85.d
+	picture = CONQUEST_eventPicture
+
+	is_triggered_only = yes
+
+	option = {
+		name = vn_missions.85.a
+		ai_chance = {
+			factor = 50 
+			modifier = {
+				factor = 0
+				government = monarchy
+			}
+		}
+		umbria_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = LZO
+		}
+		LZO = {
+			change_government = republic
+			adopt_reform_progress = ROOT
+		}
+		vassalize = LZO
+	}
+	option = {
+		name = vn_missions.85.b
+		ai_chance = {
+			factor = 50 
+			modifier = {
+				factor = 0
+				government = republic
+			}
+		}
+		umbria_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			cede_province = LZO
+		}
+		LZO = {
+			change_government = monarchy
+			adopt_reform_progress = ROOT
+			define_ruler = {
+				dynasty = ROOT
+			}
+			define_heir = {
+				dynasty = ROOT
+			}
+		}
+		vassalize = LZO
+	}
+	option = {
+		name = vn_missions.85.c
+		ai_chance = { factor = 5 }
+		umbria_region = {
+			limit = { country_or_non_sovereign_subject_holds = ROOT }
+			add_province_modifier = {
+				name = "fra_batavia_unrest"
+				duration = 9125
+			}
 		}
 	}
 }
