@@ -2204,6 +2204,16 @@
  vn_missions.61.a: "Create the Batavian Republic"
  vn_missions.61.b: "Create the Batavian Kingdom"
  vn_missions.61.c: "Continue ruling them from [Root.Capital.GetCapitalName]"
+ vn_missions.84.t: "The Cisalpine Question"
+ vn_missions.84.d: "Our conquests in Northern Italy have taken Europe by storm and shown the military superiority of the French. Now under martial law for the time being to keep control over a people who not just speak a different language, but in some cases practice a different faith to ours, the question still remains as to what to do with the Lombard institutions of government that still de jure exist.\nWe could either create a Cisalpine republic or an Italian monarchy, both of which would remain puppet states to us, or choose to continue centralized rule in the territories with an iron fist; this last option, though, is likely to provoke much resistance from the subjugated Italians."
+ vn_missions.84.a: "Create the Cisalpine Republic"
+ vn_missions.84.b: "Create the Italian Kingdom"
+ vn_missions.84.c: "Continue ruling them from [Root.Capital.GetCapitalName]"
+ vn_missions.85.t: "The Umbrian Question"
+ vn_missions.85.d: "Our conquests in Central Italy have taken Europe by storm and shown the military superiority of the French. Now under martial law for the time being to keep control over a people who not just speak a different language, but in some cases practice a different faith to ours, the question still remains as to what to do with the Umbrian institutions of government that still de jure exist.\nWe could either create a 'Roman Republic' or an Umbrian monarchy, both of which would remain puppet states to us, or choose to continue centralized rule in the territories with an iron fist; this last option, though, is likely to provoke much resistance from the subjugated Italians."
+ vn_missions.85.a: "Create the Roman Republic"
+ vn_missions.85.b: "Create the Umbrian Kingdom"
+ vn_missions.85.c: "Continue ruling them from [Root.Capital.GetCapitalName]"
  vn_missions.72.t: "March on [2235.GetCapitalName]"
  vn_missions.72.d: "Our unstoppable march through Italy has culminated in the historic occupation of [2235.GetCapitalName], the seat of the Popes and a beacon of civilization. With the city finally in our hands, we can claim to be the hegemon of the Italian peninsula, but one crucial question still remains. The city's riches and countless artifacts have not gone ignored by those in command of our armies, which by now are eager to be rewarded for their exploits.\nWe must either plunder the city and seize its wealth for ourselves, which would almost certainly provoke the ire of Catholic states, or take a harsh stance against looting; this, however, would almost certainly be a detriment to morale."
  vn_missions.72.a: "We have crossed the Rubicon, and now this great city must fall."
@@ -3039,7 +3049,7 @@
  fra_fate_of_hre_fall: "Fall of the Holy Roman Empire"
  desc_fra_fate_of_hre_fall: ""
  fra_fate_of_hre_opinion: "Became the new Emperor"
- fra_batavia_unrest: "Military Rule in Batavia"
+ fra_batavia_unrest: "Martial Law"
  desc_fra_batavia_unrest: ""
  fra_sanction_crusades_mission: "Deus Vult!"
  desc_fra_sanction_crusades_mission: ""
