@@ -2204,6 +2204,16 @@
  vn_missions.61.a: "Gründet die batavische Republik"
  vn_missions.61.b: "Gründet das batavische Königreich"
  vn_missions.61.c: "Regiert sie weiterhin von [Root.Capital.GetCapitalName] aus"
+ vn_missions.84.t: "The Cisalpine Question"
+ vn_missions.84.d: "Our conquests in Northern Italy have taken Europe by storm and shown the military superiority of the French. Now under martial law for the time being to keep control over a people who not just speak a different language, but in some cases practice a different faith to ours, the question still remains as to what to do with the Lombard institutions of government that still de jure exist.\nWe could either create a Cisalpine republic or an Italian monarchy, both of which would remain puppet states to us, or choose to continue centralized rule in the territories with an iron fist; this last option, though, is likely to provoke much resistance from the subjugated Italians."
+ vn_missions.84.a: "Create the Cisalpine Republic"
+ vn_missions.84.b: "Create the Italian Kingdom"
+ vn_missions.84.c: "Regiert sie weiterhin von [Root.Capital.GetCapitalName] aus"
+ vn_missions.85.t: "The Umbrian Question"
+ vn_missions.85.d: "Our conquests in Central Italy have taken Europe by storm and shown the military superiority of the French. Now under martial law for the time being to keep control over a people who not just speak a different language, but in some cases practice a different faith to ours, the question still remains as to what to do with the Umbrian institutions of government that still de jure exist.\nWe could either create a 'Roman Republic' or an Umbrian monarchy, both of which would remain puppet states to us, or choose to continue centralized rule in the territories with an iron fist; this last option, though, is likely to provoke much resistance from the subjugated Italians."
+ vn_missions.85.a: "Create the Roman Republic"
+ vn_missions.85.b: "Create the Umbrian Kingdom"
+ vn_missions.85.c: "Regiert sie weiterhin von [Root.Capital.GetCapitalName] aus"
  vn_missions.72.t: "Marsch auf [2235.GetCapitalName]"
  vn_missions.72.d: "Unser unaufhaltsamer Marsch durch Italien gipfelte in der historischen Besetzung von [2235.GetCapitalName], dem Sitz der Päpste und einem Leuchtturm der Zivilisation. Mit der Stadt endlich in unseren Händen können wir behaupten, der Hegemon der italienischen Halbinsel zu sein, aber eine entscheidende Frage bleibt noch offen. Die Reichtümer und zahllosen Artefakte der Stadt sind von den Befehlshabern unserer Armeen, die inzwischen darauf erpicht sind, für ihre Heldentaten belohnt zu werden, nicht ignoriert worden.\nWir müssen entweder die Stadt plündern und ihren Reichtum für uns beanspruchen, was mit ziemlicher Sicherheit den Zorn der katholischen Staaten provozieren würde, oder eine harte Haltung gegen Plünderungen einnehmen; dies würde jedoch mit ziemlicher Sicherheit der Moral schaden."
  vn_missions.72.a: "Wir haben den Rubikon überquert, jetzt muss diese große Stadt fallen."
@@ -3039,7 +3049,7 @@
  fra_fate_of_hre_fall: "Fall des Heiligen Römischen Reiches"
  desc_fra_fate_of_hre_fall: ""
  fra_fate_of_hre_opinion: "Wurde der neue Kaiser"
- fra_batavia_unrest: "Militärregierung in Batavien"
+ fra_batavia_unrest: "Kriegsrecht"
  desc_fra_batavia_unrest: ""
  fra_sanction_crusades_mission: "Deus Vult!"
  desc_fra_sanction_crusades_mission: ""
