@@ -1605,7 +1605,8 @@ vn_fra_missions_slot_2_f = {
 			NOT = { country_or_non_sovereign_subject_holds = ROOT }
 		}
         trigger = {
-			OR = {
+			calc_true_if = {
+				amount = 2
 				viterbo_area = {
 					type = all
 					country_or_non_sovereign_subject_holds = ROOT
@@ -1621,7 +1622,9 @@ vn_fra_missions_slot_2_f = {
 			}
         }
         effect = {
-			add_religious_influence_effect_large = yes
+			country_event = {
+				id = vn_missions.85
+			}
             latium_area = {
                 limit = {
                     NOT = { is_core = ROOT }
@@ -2159,6 +2162,9 @@ vn_fra_missions_slot_3_a = {
 			lombardy_region = {
 				limit = { country_or_non_sovereign_subject_holds = ROOT }
 				add_devastation = -10
+			}
+			country_event = {
+				id = vn_missions.84
 			}
             romagna_region = {
                 limit = {
