@@ -5,11 +5,12 @@
 -Small fixes for the following mission trees: Austria
 -Fixed major bug causing the Factionalism of the Rus disaster to trigger multiple times
 -Gave certain Pagan religions access to a new clergy privilege, allowing them to change their personal deity
+-Added more mission events for France to optionally release Revolutionary-era tags in Italy as vassal states
 -Changed New England's country name
 -Silesia can now only balkanise at least 10 years after the Fragmentation of Poland disaster fires
 -The Old Saxon split benefactor now only receives Electorate if Old Saxony had it previously
 -Some untriggerable Harmonization events will now trigger correctly
--Major nerfs to Genoese Crossbowmen company: cost increased and size decreased; it also now does +15% fire damage rather than flat +1 to infantry fire (this made it stupidly overpowered in the early game)
+-Major nerfs to Genoese Crossbowmen company: cost increased and size decreased; it also now does +10% fire damage rather than flat +1 to infantry fire (this made it stupidly overpowered in the early game)
 -Polish Husaria company cost increased
 -Changed many modifiers in NIs
 -Other minor localization fixes
